2004-11-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/worker.py:
	  make worker reconnecting

2004-11-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/twisted/pb.py:
	  make reconnecting client factory
	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	  use reconnecting client factory and add a dialog for when the
	  manager goes away

2004-11-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_jpeg.glade:
	* flumotion/component/encoders/encoders.xml:
	* flumotion/component/encoders/jpeg.py:
	* flumotion/wizard/steps.py:
	  Implement framerate changing on JPEG encoding.
	  Should eventually be generalized as a "filter".

2004-11-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* README:
	  add test line for multipart/jpeg
	* data/glade/wizard_jpeg.glade:
	  fix up glade file

2004-11-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to development
	* flumotion.spec.in:
	  fix typo

=== release 0.1.3 ===

2004-11-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  bump for release
	* flumotion/wizard/steps.py:
	  throw up a dialog when we couldn't run code

2004-11-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  Integrate spec changes from issue 86

2004-11-11  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/steps.py:
	Only skip configuration if we use firewire audio

2004-11-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* flumotion/wizard/steps.py:
	* flumotion/worker/worker.py:
	  distcheck now works again.

2004-11-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_audiotest.glade:
	  add volume
	* data/glade/wizard_vorbis.glade:
	  make quality the default - but didn't work
	* flumotion/wizard/steps.py:
	  really make quality the default for vorbis